--- a/Default.cshtml
+++ b/Default.cshtml
@@ -8,7 +8,7 @@
     <div class="content-wrapper">
         <hgroup class="title">
             <h1>@Page.Title.</h1>
-            <h2>All the Airgead is an expenses tracking app designed to hel you manage your day to day expenses.</h2>
+            <h2>All the Airgead is an expenses tracking app designed to help you manage your day to day expenses.</h2>
         </hgroup>
 
     </div>
@@ -35,6 +35,6 @@
 
     <li class="four">
         <h5>Money Management</h5>
-        Once you have been using the app for a while to track your expenses, you might find it helpful to compare your expenses to those of other people using the app. We can also use the priority you apply to the expenses you enter to recommend where you could save money.
+        Once you have been using the app for a while to track your expenses, you might find it helpful to compare your expenses to those of other people using the app. We can also use the priority you applied to your expenses to recommend where you could save money.
     </li>
 </ol>
