Updated details for viewers, still not functioning emails or numbers

--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -6,7 +6,7 @@
 
 <hgroup class="title">
     <h1>@Page.Title.</h1>
-    <h2>Your contact page.</h2>
+    <h2> This page has all the details if you have a problem and need some help.</h2>
 </hgroup>
 
 <section class="contact">
@@ -15,11 +15,11 @@
     </header>
     <p>
         <span class="label">Main:</span>
-        <span>425.555.0100</span>
+        <span>000 1234567</span>
     </p>
     <p>
         <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
+        <span>000 1234567</span>
     </p>
 </section>
 
@@ -29,15 +29,15 @@
     </header>
     <p>
         <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
+        <span><a href="mailto:Support@example.com">Support@gmail.com</a></span>
     </p>
     <p>
         <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
+        <span><a href="mailto:Marketing@example.com">Marketing@gmail.com</a></span>
     </p>
     <p>
         <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
+        <span><a href="mailto:General@example.com">General@gmail.com</a></span>
     </p>
 </section>
 
@@ -46,7 +46,7 @@
         <h3>Address:</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        UCD<br />
+        Belfield, Dublin.
     </p>
 </section>
