--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -29,15 +29,15 @@
     </header>
     <p>
         <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@gmail.com</a></span>
+        <span><a href="alltheairgead@gmail.com">Support@gmail.com</a></span>
     </p>
     <p>
         <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@gmail.com</a></span>
+        <span><a href="alltheairgead@gmail.com">Marketing@gmail.com</a></span>
     </p>
     <p>
         <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@gmail.com</a></span>
+        <span><a href="alltheairgead@gmail.com">General@gmail.com</a></span>
     </p>
 </section>
 
