Added a default chart to be displayed so page doesn't look as blank.

--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -53,6 +53,8 @@
         break;
      case "Day":<img src="~/Charts/DayGraph.cshtml" alt="Daily expense history chart"/>
         break;
+     default :<img src="~/Charts/AllChartData.cshtml" alt="Full expense history chart"/>
+        break;
      }
      
        
