--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -36,10 +36,10 @@
        <form action="" method="post">
          <p>Time Span:
              <select name="formChartType">
-                 <option value="Day" selected>Daily</option>
-                 <option value="Month">Monthly</option>
-                 <option value="Year">Yearly</option>
-                 <option value="All">All Expense History</option>
+                 <option value="Day" >Daily</option>
+                 <option value="Month" >Monthly</option>
+                 <option value="Year" >Yearly</option>
+                 <option value="All" selected>All Expense History</option>
              </select></p>
          <p><input type="submit" value="Enter" /></p>
      </form>
