--- a/Members/Expenses.cshtml
+++ b/Members/Expenses.cshtml
@@ -3,6 +3,15 @@
         Response.Redirect("~/Account/Login?returnUrl="
             + Request.Url.LocalPath);
     }
+
+    Validation.RequireField("Date", "Date name is required");
+    Validation.RequireField("Time", "Time is required");
+    Validation.RequireField("Price", "Price is required");
+
+    Validation.Add("Date", Validator.DateTime("Date must be a valid date"));
+    Validation.Add("credits", Validator.DateTime("Time must be a valid time"));
+
+
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Expenses";
 }
@@ -42,15 +51,39 @@
        }
      }
 
+<header>
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+  </script>
+
+  <!-- From http://keith-wood.name/timeEntry.html -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/Scripts/jquery.timeentry.css"> 
+    <script type="text/javascript" src="~/Scripts/jquery.plugin.js"></script> 
+    <script type="text/javascript" src="~/Scripts/jquery.timeentry.js"></script>
+    <script>
+        $("#timepicker").timeEntry({show24Hours: true});
+    </script>
+
+    </header>
+
 <hgroup class="title">
     <h1>@Page.Title.</h1>
     <h2>This is where you can add a new expense.</h2>
+
 </hgroup>
 <body>
      <h1>Add a new expense</h1>
        <form action="" method="post">
-         <p>Date: <input type="date" name="formDate"  value="@DateTime.Now.Date.ToShortDateString()"/></p>
-         <p>Time: <input type="time" name="formTime"  value="@DateTime.Now.ToShortTimeString()"/></p>
+         <p>Date: <input type="text" id="datepicker" name="formDate"  value="@DateTime.Now.Date.ToShortDateString()"/></p>
+         <p>Time: <input type="time" id="timepicker"name="formTime"  value="@DateTime.Now.ToShortTimeString()"/></p>
          <p>Category:
              <select name="formCategory">
                  @foreach(var row in @SelectedData)
