reset to master

--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -8,7 +8,7 @@
     var ChartType="";
     var db = Database.Open("StarterSite");
     var UserId = WebSecurity.CurrentUserId;
-    var selectQueryString = "SELECT Date, Time, Category, CAST(Price as decimal(19,2)) as Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
+    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
     var SelectUserCategories = ("SELECT DISTINCT Category FROM Expense, Catagories WHERE UserId = " + @UserId + "SELECT CategoryName FROM Catagories");
 
     Layout = "~/_SiteLayout.cshtml";
