Enabled login with Google account.

--- a/_AppStart.cshtml
+++ b/_AppStart.cshtml
@@ -16,7 +16,7 @@
     //    appId: "",
     //    appSecret: "");
 
-    //OAuthWebSecurity.RegisterGoogleClient();
+    OAuthWebSecurity.RegisterGoogleClient();
 
     //WebMail.SmtpServer = "mailserver.example.com";
     //WebMail.EnableSsl = true;
