set max on price.

--- a/Members/Expenses.cshtml
+++ b/Members/Expenses.cshtml
@@ -103,7 +103,7 @@
                  <option value="2">Medium</option>
                  <option value="1">High</option>
              </select></p>
-         <p>Price: <input type="number" name="formPrice" min="0" step="0.01" required/></p>
+         <p>Price: <input type="number" name="formPrice" min="0" max="999999999999" step="0.01" required/></p>
          <p>More Info: <input type="text" name="formMoreInfo" /></p>
          <p><input type="submit" value="Enter" /></p>
      </form>
