--- a/Members/Compare.cshtml
+++ b/Members/Compare.cshtml
@@ -18,7 +18,7 @@
         <title>Compare</title>
     </head>
     <body>
-        <h1>This will do a basic comparison between you and all other users of he site and app.</h1>
+        <h1>This will do a basic comparison between you and all other users of the site and app.</h1>
         <div>
 
             <p><img src="~/Charts/ComparisonChart.cshtml" alt="Expense comparison chart"/> </p>
