Changes to charts and Expenses

--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -8,7 +8,7 @@
     var ChartType="";
     var db = Database.Open("StarterSite");
     var UserId = WebSecurity.CurrentUserId;
-    var selectQueryString = "SELECT Date, Time, Category, CAST(Price as decimal(19,2)) as Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
+    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
     var SelectUserCategories = ("SELECT DISTINCT Category FROM Expense, Catagories WHERE UserId = " + @UserId + "SELECT CategoryName FROM Catagories");
 
     Layout = "~/_SiteLayout.cshtml";
@@ -36,10 +36,10 @@
        <form action="" method="post">
          <p>Time Span:
              <select name="formChartType">
-                 <option value="Day" >Daily</option>
-                 <option value="Month" >Monthly</option>
-                 <option value="Year" >Yearly</option>
-                 <option value="All" selected>All Expense History</option>
+                 <option value="Day" selected>Daily</option>
+                 <option value="Month">Monthly</option>
+                 <option value="Year">Yearly</option>
+                 <option value="All">All Expense History</option>
              </select></p>
          <p><input type="submit" value="Enter" /></p>
      </form>
@@ -52,8 +52,6 @@
      case "Month":<img src="~/Charts/MonthGraph.cshtml" alt="Monthy expense history chart"/>
         break;
      case "Day":<img src="~/Charts/DayGraph.cshtml" alt="Daily expense history chart"/>
-        break;
-     default :<img src="~/Charts/AllChartData.cshtml" alt="Full expense history chart"/>
         break;
      }
      
