--- a/Members/Expenses.cshtml
+++ b/Members/Expenses.cshtml
@@ -11,7 +11,6 @@
     Validation.Add("Date", Validator.DateTime("Date must be a valid date"));
     Validation.Add("credits", Validator.DateTime("Time must be a valid time"));
 
-
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Expenses";
 
@@ -25,6 +24,7 @@
      var Price="";
      var MoreInfo="";
      var Priority=4;
+
      
      int UserId;
      UserId= WebSecurity.CurrentUserId;
@@ -62,12 +62,12 @@
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script>
   $(function() {
-    $( "#datepicker" ).datepicker();
+    $("#datepicker").datepicker();
   });
   </script>
 
   <!-- From http://keith-wood.name/timeEntry.html -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="~/Scripts/jquery.timeentry.css"> 
     <script type="text/javascript" src="~/Scripts/jquery.plugin.js"></script> 
     <script type="text/javascript" src="~/Scripts/jquery.timeentry.js"></script>
@@ -75,7 +75,7 @@
         $(function() {
             $("#timepicker").timeEntry({show24Hours: true});
                     });
-  </script>
+  </script> -->  
 
     
 
@@ -89,8 +89,8 @@
 <body>
      <h1>Add a new expense</h1>
        <form action="" method="post">
-         <p>Date: <input type="date" name="formDate" required/></p>
-         <p>Time: <input type="time" name="formTime" required/></p>
+         <p>Date: <input type="date" id ="datepicker" name="formDate" required/></p>
+         <p>Time: <input type="time" id="timepicker" name="formTime" required/></p>
          <p>Category:
              <select name="formCategory">
                  @foreach(var row in @SelectedData)
