--- a/AllTheAirgeadApp/alltheairgeadApp/LoginPage.xaml
+++ b/AllTheAirgeadApp/alltheairgeadApp/LoginPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<!-- Main login / registration page -->
+<Page
     x:Class="alltheairgeadApp.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,14 +9,17 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <!-- Main content grid -->
     <Grid x:Name="LayoutRoot">
 
+        <!-- Setup transition -->
         <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
 
+        <!-- Define grid rows -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -29,34 +33,45 @@
         <!-- Login / Register Pivot -->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Pivot>
+                <!-- Specify the pivot header style -->
                 <Pivot.HeaderTemplate>
                     <DataTemplate>
                         <TextBlock FontFamily="/Assets/Fonts/orangejuice.ttf#orange juice" FontSize="90" Text="{Binding}" />
                     </DataTemplate>
                 </Pivot.HeaderTemplate>
                 
+                <!-- Build the login pivot item. -->
                 <PivotItem Header="Login">
                     <StackPanel Margin="0,50">
+                        <!-- Textbox for email entry. -->
                         <TextBox x:Name="EmailLogin" InputScope="EmailSmtpAddress" HorizontalAlignment="Center" Width="300" PlaceholderText="Email Address" IsSpellCheckEnabled="False" IsTextPredictionEnabled="False"/>
+                        <!-- Hidden password box -->
                         <PasswordBox x:Name="PasswordLogin" HorizontalAlignment="Center" Width="300" PlaceholderText="Password" IsPasswordRevealButtonEnabled="True"/>
+                        <!-- Login button -->
                         <Grid Width="300" HorizontalAlignment="Center">
                             <Button x:Name="LoginButton" Click="LoginButton_Click" Content="Login" Width="100"/>
                         </Grid>
                     </StackPanel>
                 </PivotItem>
 
+                <!-- Build the registration pivot item -->
                 <PivotItem Header="Register">
                     <StackPanel Margin="0,50">
+                        <!-- Pivot item for entering email -->
                         <TextBox x:Name="EmailRegister" InputScope="EmailSmtpAddress" HorizontalAlignment="Center" Width="300" PlaceholderText="Email Address" IsSpellCheckEnabled="False" IsTextPredictionEnabled="False" TextChanged="EmailRegister_TextChanged"/>
+                        <!-- Passwor boxes to hide entered password and confirmation password -->
                         <PasswordBox x:Name="PasswordRegister" HorizontalAlignment="Center" Width="300" PlaceholderText="Password" Margin="0,5,0,2" PasswordChanged="PasswordRegister_PasswordChanged"/>
                         <PasswordBox x:Name="PasswordConfirmationRegister" HorizontalAlignment="Center" Width="300" PlaceholderText="Confirm Password" Margin="0,2,0,2" PasswordChanged="PasswordConfirmationRegister_PasswordChanged"/>
+                        <!-- Three bars to light up when entered data is valid -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Rectangle Name="EmailValidLight" Height="10" Width="100" Fill="Gray"/>
                             <Rectangle Name="PasswordValidLight" Height="10" Width="100" Fill="Gray"/>
                             <Rectangle Name="PasswordConfirmValidLight" Height="10" Width="100" Fill="Gray"/>
                         </StackPanel>
+                        <!-- Empty stack panel to display any errors in the login -->
                         <StackPanel Name="RegisterMessages" Width="300" />
                         <Grid Width="300" HorizontalAlignment="Center">
+                            <!-- Register button -->
                             <Button x:Name="RegisterButton" Click="RegisterButton_Click" Content="Register" Width="100" IsEnabled="False"/>
                         </Grid>
                     </StackPanel>
