--- a/Members/Expenses.cshtml
+++ b/Members/Expenses.cshtml
@@ -89,7 +89,7 @@
 <body>
      <h1>Add a new expense</h1>
        <form action="" method="post">
-         <p>Date: <input type="date" id ="datepicker" name="formDate" required/></p>
+         <p>Date: <input type="date" name="formDate" required/></p>
          <p>Time: <input type="time" id="timepicker" name="formTime" required/></p>
          <p>Category:
              <select name="formCategory">
@@ -105,8 +105,8 @@
                  <option value="2">Medium</option>
                  <option value="1">High</option>
              </select></p>
-         <p>Price: <input type="number" name="formPrice" min="0" max="10000" step="0.01" required/></p>
-         <p>More Info: <input type="text" name="formMoreInfo" /></p>
+         <p>Price: <input type="number" name="formPrice" min="0" max="1000" step="0.01" required/></p>
+         <p>More Info: <input type="text" name="formMoreInfo" size="20" maxlength="120"/></p>
          <p><input type="submit" value="Enter" /></p>
      </form>
 
