--- a/Analytics.cshtml
+++ b/Analytics.cshtml
@@ -16,12 +16,12 @@
 
         <div id="Block">
             <h2>Compare me to other people</h2>
-            <p>To enable you to compare to other people, you need to give us a little more information about yourself to help us make comparisons that make sense.</p>
+            <p>This feature allows you to compare your expenses to the average of our typical users.</p>
             <a href="~/Members/Compare">Get Started</a>
         </div>
         <div id="Block">
             <h2>Help me save money</h2>
-            <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you could cut back on spending. You can alter the default priority of each category, as well as change the priority of individual expenses when you create them.</p>
+            <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you could cut back on spending.</p>
             <a href="~/Members/Saving">Help me save</a>
         </div>
 
