--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -83,12 +83,12 @@
          <p>Time Span:
              <select name="formChartType">
                  <option value="Day" >Daily</option>
-                 <option value="Month" >Monthly</option>
+                 <option value="Month" selected>Monthly</option>
                  <option value="Year" >Yearly</option>
-                 <option value="All" selected>All Expense History</option>
+                 <option value="All" >All Expense History</option>
              </select></p>
          <p><input type="submit" value="Enter" /></p>
-     </form><img src="~/Charts/AllChartData.cshtml" alt="Full expense history chart"/>
+     </form><img src="~/Charts/MonthGraph.cshtml" alt="Monthy expense history chart"/>
         break;
 
      }
