Added comments to Analytics, Comparison, Expenses, Saving. Updated Readme to include link to website.

--- a/Analytics.cshtml
+++ b/Analytics.cshtml
@@ -17,11 +17,13 @@
         <div id="Block">
             <h2>Compare me to other people</h2>
             <p>This feature allows you to compare your expenses to the average of our typical users.</p>
+            <!--Directs users to comparison page-->
             <a href="~/Members/Compare">Get Started</a>
         </div>
         <div id="Block">
             <h2>Help me save money</h2>
             <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you could cut back on spending.</p>
+            <!--Directs users to help me save page-->
             <a href="~/Members/Saving">Help me save</a>
         </div>
 
