--- a/Members/Compare.cshtml
+++ b/Members/Compare.cshtml
@@ -20,7 +20,7 @@
     <body>
         <h1>This will do a basic comparison between you and all other users of the site and app.</h1>
         <div>
-
+            <!-- Pulls in the image of the required chart from the related page -->
             <p><img src="~/Charts/ComparisonChart.cshtml" alt="Expense comparison chart"/> </p>
             
         </div>
